# preda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  preda-0.1.63.vsix  preda-0.1.64.vsix  preda-0.1.79.vsix  preda-0.1.84.vsix  xmake.lua  xmake_rules.lua
SFC/: CMakeLists.txt  essentials.cpp  essentials.h  examples.h
SFC/core/ext/: ext.h  lib_inc.c
SFC/core/ext/7zip/: 7zip.h
SFC/core/ext/bignum/: big_num.cpp  big_num.h  precision_num.cpp  precision_num.h
SFC/core/ext/botan/: botan.cpp  botan.h  readme.txt
SFC/core/ext/concurrentqueue/: async_queue.h  atomicops.h  blockingconcurrentqueue.h  concurrentqueue.h
SFC/core/ext/exprtk/: exprtk.cpp  exprtk.h
SFC/core/ext/ipp/: ipp_canvas.h  ipp_config.h  ipp_core.cpp  ipp_core.h  ipp_image.cpp  ipp_image.h
SFC/core/ext/rocksdb/: rocksdb.cpp  rocksdb.h  rocksdb.inc  rocksdb_conf.h  rocksdb_serving.cpp  rocksdb_serving.h
SFC/core/ext/sparsehash/: sparsehash.h
SFC/core/ext/zlib/: zlib.h
SFC/core/inet/: datagram_pump.cpp  datagram_pump.h  http_client.cpp  http_client.h  inet.cpp  inet.h
SFC/core/os/: file_dir.cpp  file_dir.h  file_zip.cpp  file_zip.h  high_level.cpp  high_level.h  kernel.cpp  kernel.h  kernel_encode.cpp  kernel_log.cpp  multi_thread.cpp  multi_thread.h  objc_wrap.mm  platform.h  precompiler.cpp  precompiler.h  predefines.h  thread_primitive.h  user_inputs.cpp  user_inputs.h
SFC/core/rt/: buffer_type.h  json.cpp  json.h  mem_alloc.cpp  mem_alloc.h  runtime_base.h  small_math.h  string_type.h  string_type_ops.h  type_traits.h
SFC/libs/win/: .gitignore
oxd_libsec/: CMakeLists.txt  oxd_libsec.h
oxd_libsec/src/: algo_base.h  base58check.cpp  base58check.h  bitcoin.h  crypt_misc.cpp  crypt_misc.h  delegated.h  ecdsa.cpp  ecdsa.h  ed25519.h  ethereum.h  keccak256.cpp  keccak256.h  sec_datablock.h  sec_suites.cpp  sec_suites.h  secp256k1.h  sm2p256v1.h
oxd_libsec/src/libsodium/: libs_inline_c.h  libs_inline_c_0.cpp  libs_inline_c_1.cpp  libs_inline_c_2.cpp  libs_inline_c_3.cpp  libs_inline_c_4.cpp
oxd_preda/: .gitmodules  CMakeLists.txt  CMake_rules.txt
oxd_preda/engine/: CMakeLists.txt
oxd_preda/engine/evm_engine/: EVMContractData.cpp  EVMContractData.h  EVMContractDataBase.cpp  EVMContractDataBase.h  EVMExecutionEngine.cpp  EVMExecutionEngine.h
oxd_preda/engine/mockup/: TranspiledCode.h  main.cpp  mockup.vcxproj  mockup.vcxproj.filters
oxd_preda/engine/playground/: oneshot_cmd.cpp  oneshot_cmd.h  playground.cpp  playground.h
oxd_preda/engine/preda_engine/: ContractData.h  ContractDatabase.cpp  ContractDatabase.h  ContractDatabaseEntry.cpp  ContractDatabaseEntry.h  ContractRuntimeInstance.cpp  ContractRuntimeInstance.h  ExecutionEngine.cpp  ExecutionEngine.h  PredaCompiledContracts.cpp  PredaCompiledContracts.h  RuntimeInterfaceImpl.cpp  RuntimeInterfaceImpl.h  RuntimeInterfaceImpl_debug.cpp  RvmAssetDelegate.cpp  RvmAssetDelegate.h  RvmContractDelegate.cpp  RvmContractDelegate.h  SymbolDBForTranspiler.cpp  SymbolDBForTranspiler.h  WASMRuntime.cpp  WASMRuntime.h  bigint.cpp  bigint.h  main.cpp
oxd_preda/native/abi/: vm_address.h  vm_interfaces.h  vm_types.h
oxd_preda/native/types/: abi_def_impl.cpp  abi_def_impl.h  array.h  big_num.h  blob.cpp  blob.h  coins.cpp  coins.h  compound.h  consecutive_set.h  data.cpp  data.h  data_jsonifer.cpp  data_jsonifer.h  exception.h  hashmap.h  map_details.h  ordered_map.h  precision_float.h  string.h  struct.h  type_def.h  typetraits.h  uint_ext.h  wallet.cpp  wallet.h
oxd_preda/simulator/: CMakeLists.txt  chain_simu.cpp  chain_simu.h  core_contracts.cpp  core_contracts.h  main.cpp  shard_data.cpp  shard_data.h  simu_global.cpp  simu_global.h  simu_script.cpp  simu_script.h  simu_shard.cpp  simu_shard.h  simulator.cpp  simulator.h
oxd_preda/simulator/antlr_generated/: PredaScript.interp  PredaScriptBaseListener.cpp  PredaScriptBaseListener.h  PredaScriptLexer.cpp  PredaScriptLexer.h  PredaScriptLexer.interp  PredaScriptLexer.tokens  PredaScriptListener.cpp  PredaScriptListener.h  PredaScriptParser.cpp  PredaScriptParser.h
oxd_preda/simulator/contracts/: AirDrop.prdts  Ballot.prd  Ballot.prdts  FCA.prd  FCA.prdts  Kitty.prd  Kitty.prdts  RandomReseedTest.prdts  Token.prd  Token.prdts  Token.sol  Token.sol-json  add.prd  add.script  cross_call.script  cross_call_A.prd  cross_call_B.prd  scope.prd  scope.prdts  sol.prdts
oxd_preda/spec/: Crystality.g4  Preda.g4  PredaScript.g4  Script2cpp.bat  language_spec.md  xtl2cpp.bat
oxd_preda/transpiler/: CMakeLists.txt  CodeSerializer.cpp  CodeSerializer.h  CrystalityRealListener.cpp  CrystalityRealListener.h  ErrorPortal.cpp  ErrorPortal.h  ExpressionParser.cpp  ExpressionParser.h  FunctionCallGraph.h  IdentifierHub.cpp  IdentifierHub.h  PredaParseTreeWalker.cpp  PredaParseTreeWalker.h  PredaRealListener.cpp  PredaRealListener.h  transpiler.cpp  transpiler.h  util.cpp  util.h
oxd_preda/transpiler/antlr_generated/: Preda.interp  Preda.tokens  PredaBaseListener.cpp  PredaBaseListener.h  PredaBaseVisitor.cpp  PredaBaseVisitor.h  PredaLexer.cpp  PredaLexer.h  PredaLexer.interp  PredaLexer.tokens  PredaListener.cpp  PredaListener.h  PredaParser.cpp  PredaParser.h  PredaVisitor.cpp  PredaVisitor.h
oxd_preda/transpiler/test/: main.cpp
oxd_preda/transpiler/testcase/: address_hash_literal.prd  bigint.prd  compile_error.prd  const_and_lvalue.prd  cross_call_A.prd  cross_call_B.prd  cross_call_C.prd  debug_ctx.prd  dev.prd  doc.prd  float.prd  int_to_string.prd  interfaceA.prd  interfaceB.prd  literal.prd  longint.prd  map.prd  multi_sign.prd  relay.prd  relay_broadcast.prd  relay_lambda.prd  sdktest.prd  string.prd  test.prd  test1.prd  test2.prd  test3.prd  token.prd  yield_and_default_constructor.prd  zombie.prd
oxd_preda/transpiler/transpiler/: Allocator.cpp  Allocator.h  BaseTranspiler.cpp  BaseTranspiler.h  ConcreteType.cpp  ConcreteType.h  PredaBuiltInABITypes.cpp  PredaBuiltInABITypes.h  PredaBuiltInConcreteTypes.cpp  PredaBuiltInConcreteTypes.h  PredaBuiltInTemplateTypes.cpp  PredaBuiltInTemplateTypes.h  PredaCommon.h  PredaTranspiler.cpp  PredaTranspiler.h  TemplateType.cpp  TemplateType.h
(+972 files in other folders)
